--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header class="site-header">
     <div class="logo"> 
-      <img src="portfolio/images/GC.png" alt="Logo Glwadys" class="logo-img">
+      <img src="images/GC.png" alt="Logo Glwadys" class="logo-img">
     </div>
     <nav class="nav-menu">
       <a href="#etudes" class="nav-link">Études</a>
