--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>Glwadys - Portfolio </title>
   <link rel="stylesheet" href="style.css"> <!-- lien vers ton fichier CSS -->
+
 </head>
 <body>
   <header class="site-header">
     <div class="logo"> 
-      <img src="images/GC.png" alt="Logo Glwadys" class="logo-img">
+      <img src="portfolio/GC.png" alt="Logo Glwadys" class="logo-img">
     </div>
     <nav class="nav-menu">
       <a href="#etudes" class="nav-link">Études</a>
@@ -57,11 +58,11 @@
   </div>
   <div class="categories">
     <ul>
-        <li class="category">Montage</li>
-        <li class="category">Photographie</li>
-        <li class="category">Code</li>
-        <li class="category">Réalisations</li>
-        <li class="category">Une autre</li>
+        <li class="category1">Montage</li>
+        <li class="category2">Photographie</li>
+        <li class="category3">Code</li>
+        <li class="category4">Réalisations</li>
+        <li class="category5">Une autre</li>
     </ul>
 </div>
 <div class="self-presentation">
@@ -72,8 +73,9 @@
  <h4>Dans cette quête à la perfection, une voie s'en dégage : celle de l'accomplissement personnel via la créativité, la rigueur et le sérieux. </h4>
 <p> Au sein de ce portolio, je veux mettre en avant l'ensemble de mes productions afin que vous puissiez vous intéresser à mon profil, à ma créativité et à mon monde.</p>
   <h5>Bonne aventure et lecture, </h5> 
-  <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="social-icon">
-  </a>
+  <div class="signature">
+  <img src="portfolio/images/signature.png" alt="signature">
+  </div>
 </div>
 
 
@@ -88,5 +90,5 @@
     <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Gmail" class="social-icon">
   </a>
 </footer>
-</body>
+    </body>
 </html>
