--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
   
     <!-- Flèches de navigation -->
     <div class="carousel-arrows">
-      <label for="slide3" class="prev">&#10094;</label>
-      <label for="slide1" class="next">&#10095;</label>
-  
-      <label for="slide1" class="prev slide2">&#10094;</label>
-      <label for="slide2" class="next slide2">&#10095;</label>
-  
-      <label for="slide2" class="prev slide2">&#10094;</label>
-      <label for="slide3" class="next slide3">&#10095;</label>
+  <!-- Slide 1 : pas de prev, next vers slide2 -->
+  <label for="slide2" class="next next1">→</label>
 
-      <label for="slide1" class="prev slide2">&#10094;</label>
-      <label for="slide3" class="next slide3">&#10095;</label>
-    </div>
+  <!-- Slide 2 : prev vers slide1, next vers slide3 -->
+  <label for="slide1" class="prev prev2">←</label>
+  <label for="slide3" class="next next2">→</label>
+
+  <!-- Slide 3 : prev vers slide2, next vers slide1 -->
+  <label for="slide2" class="prev prev3">←</label>
+  <label for="slide1" class="next next3">→</label>
+</div>
+</div>
   </div>
   <div class="presentation">
     <h2>
@@ -90,5 +90,6 @@
     <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Gmail" class="social-icon">
   </a>
 </footer>
+    <script src="accueilP1.js"></script>
     </body>
 </html>
