--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <p> Au sein de ce portolio, je veux mettre en avant l'ensemble de mes productions afin que vous puissiez vous intéresser à mon profil, à ma créativité et à mon monde.</p>
   <h5>Bonne aventure et lecture, </h5> 
   <div class="signature">
-  <img src="portfolio/images/signature.png" alt="signature">
+  <img src="images/signature.png" alt="signature">
   </div>
 </div>
 
